--- a/Views/Home/Added.cshtml
+++ b/Views/Home/Added.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Toko_Buku.Models.databuku>
+﻿@model IEnumerable<Toko_Buku.Models.DataBukuViewModel>
 
 @{
     ViewData["Title"] = "Added";
