--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,9 +1,10 @@
-﻿@model IEnumerable<Toko_Buku.Models.databuku>
+﻿@model IEnumerable<Toko_Buku.Models.DataBukuViewModel>
 
 @{
     ViewData["Title"] = "Home Page";
 }
 
+@ViewData["asa"]
 <div class="text-center">
     <table class="table">
     <thead>
