--- a/Views/Home/Add_Book.cshtml
+++ b/Views/Home/Add_Book.cshtml
@@ -1,4 +1,4 @@
-﻿@model Toko_Buku.Models.databuku
+﻿@model Toko_Buku.Models.DataBuku
 
 @{
     ViewData["Title"] = "Add_Book";
@@ -13,6 +13,11 @@
         <form asp-action="Added">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
+                <label asp-for="Id" class="control-label"></label>
+                <input asp-for="Id" class="form-control" />
+                <span asp-validation-for="Id" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="Judul" class="control-label"></label>
                 <input asp-for="Judul" class="form-control" />
                 <span asp-validation-for="Judul" class="text-danger"></span>
@@ -21,6 +26,11 @@
                 <label asp-for="Harga" class="control-label"></label>
                 <input asp-for="Harga" class="form-control" />
                 <span asp-validation-for="Harga" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="User" class="control-label"></label>
+                <input asp-for="User" class="form-control" />
+                <span asp-validation-for="User" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
